WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59891
Can't open document from skydrive.com in Microsoft Word
https://bugs.webkit.org/show_bug.cgi?id=59891
Summary
Can't open document from skydrive.com in Microsoft Word
Anders Carlsson
Reported
2011-05-01 14:13:49 PDT
Can't open document from skydrive.com in Microsoft Word
Attachments
Patch
(1.63 KB, patch)
2011-05-01 14:14 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-01 14:14:43 PDT
Created
attachment 91844
[details]
Patch
Anders Carlsson
Comment 2
2011-05-01 14:16:04 PDT
Committed
r85431
: <
http://trac.webkit.org/changeset/85431
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug