2011-05-01  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Can't open document from skydrive.com in Microsoft Word
        https://bugs.webkit.org/show_bug.cgi?id=59891
        <rdar://problem/9354285>

        Add the AllowHalfBakedQuickDrawSupport quirk for the SharePoint plug-in.

        * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
        (WebKit::NetscapePluginModule::determineQuirks):


Canonical link: https://commits.webkit.org/75136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85431 268f45cc-cd09-0410-ab3c-d52691b4dbfc