Source/WebKit2/Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm
@@ -390,6 +390,12 @@ void NetscapePluginModule::determineQuirks()
         // so we'll allow it to be instantiated even though we don't support QuickDraw.
         m_pluginQuirks.add(PluginQuirks::AllowHalfBakedQuickDrawSupport);
     }
+
+    if (plugin.bundleIdentifier == "com.microsoft.sharepoint.browserplugin") {
+        // The Microsoft SharePoint plug-in uses QuickDraw but doesn't paint or receive events
+        // so we'll allow it to be instantiated even though we don't support QuickDraw.
+        m_pluginQuirks.add(PluginQuirks::AllowHalfBakedQuickDrawSupport);
+    }
 #endif
 }
 
